DbABCFile/test/a.ck
DbAbcFile dbf;

"../samples/cooleys.abc" => dbf.open;


// warning: No number given, ignoring -n option
// error: nested { not allowed
// error: No R: in header, cannot apply Barfly model without %%MIDI ptstress